added a symlink of python3 to /usr/bin
Signed-off-by: Christoph Görn <goern@redhat.com>

--- a/thoth-python-36-centos7/Dockerfile
+++ b/thoth-python-36-centos7/Dockerfile
@@ -16,6 +16,7 @@ LABEL summary="$SUMMARY" \
 
 USER 0
 
+RUN ln -sf /opt/app-root/bin/python3 /usr/bin/python3
 RUN pip install pipenv coala-bears pylint
 
 USER 1001
