--- a/thoth-python-36/Dockerfile
+++ b/thoth-python-36/Dockerfile
@@ -3,7 +3,10 @@ FROM registry.fedoraproject.org/fedora:28
 ENV PYTHON_VERSION="3.6" \
     SUMMARY="Thoth's toolchain for testing Python $PYTHON_VERSION applications" \
     DESCRIPTION="Thoth's toolchain for testing Python $PYTHON_VERSION applications." \
-    LANG="en_US.UTF-8"
+    LANG="en_US.UTF-8" \
+    USERID=1042 \
+    HOME="/opt/app-root/src" \
+    PATH="/opt/app-root/src/bin:/opt/app-root/bin:$PATH"    
 
 LABEL summary="$SUMMARY" \
       description="$DESCRIPTION" \
@@ -12,8 +15,8 @@ LABEL summary="$SUMMARY" \
       io.openshift.expose-services="8080:http" \
       io.openshift.tags="python,python36" \
       name="thoth-station/python-36" \
-      version="0.1.4" \
-      release="2" \
+      version="0.2.0" \
+      release="1" \
       usage="This is not a S2I builder image!" \
       maintainer="Christoph Görn <goern@redhat.com>"
 
@@ -23,14 +26,15 @@ RUN dnf update -y --setopt=tsflags=nodocs && \
     pip3 install pipenv
 
 COPY ./ /tmp/src/thoth-python-36-centos7
-RUN pushd /tmp/src/thoth-python-36-centos7 && \
+RUN useradd -u ${USERID} -r -g 0 -d ${HOME} -s /sbin/nologin -c "Default Application User" default && \
+    pushd /tmp/src/thoth-python-36-centos7 && \
     pipenv lock -r > requirements.txt && \
     pip3 install -r requirements.txt && \
-    mkdir -p /opt/app-root && \
-    chmod 777 /opt/app-root && \
-    chown 1042 /opt/app-root && \
+    mkdir -p ${HOME}/.pki/nssdb && \
+    chown -R ${USERID}:0 ${HOME} && \
+    chmod 777 ${HOME} && \
     rm -rf /tmp/src
 
-USER 1042
+USER ${USERID}
 
-WORKDIR /opt/app-root
+WORKDIR ${HOME}
