adding a aicoe standard pylintrc file
Signed-off-by: Christoph Görn <goern@redhat.com>

--- a/thoth-pylint/Dockerfile
+++ b/thoth-pylint/Dockerfile
@@ -18,6 +18,9 @@ COPY ./ /tmp/src/thoth-python-36
 RUN pushd /tmp/src/thoth-python-36 && \
     pipenv lock -r > requirements.txt && \
     pip3 install -r requirements.txt && \
+    cp pylintrc /etc/pylintrc && \
+    chmod 644 /etc/pylintrc && \
+    chown 0:0 /etc/pylintrc && \
     rm -rf /tmp/src
 
 USER ${USERID}
