--- a/thoth-coala/Dockerfile
+++ b/thoth-coala/Dockerfile
@@ -13,8 +13,9 @@ LABEL summary="$SUMMARY" \
       version="0.1.0" \
       release="0"
 
-COPY ./ /tmp/src/thoth-python-36
-RUN pushd /tmp/src/thoth-python-36 && \
+COPY ./ /tmp/src/thoth-pylint
+RUN pushd /tmp/src/thoth-pylint && \
+    chmod 777 /tmp/src/thoth-pylint && \
     pipenv lock -r > requirements.txt && \
-    pip3 install -r requirements.txt && \
+    pip3 install --user -r requirements.txt && \
     rm -rf /tmp/src
