using `pipenv install` now
Signed-off-by: Christoph Görn <goern@redhat.com>

--- a/thoth-coala/Dockerfile
+++ b/thoth-coala/Dockerfile
@@ -13,9 +13,7 @@ LABEL summary="$SUMMARY" \
       version="0.1.0" \
       release="0"
 
-COPY ./ /tmp/src/thoth-pylint
-RUN pushd /tmp/src/thoth-pylint && \
-    chmod 777 /tmp/src/thoth-pylint && \
-    pipenv lock -r > requirements.txt && \
-    pip3 install --user -r requirements.txt && \
-    rm -rf /tmp/src
+COPY ./ /tmp/src-thoth-pylint
+RUN pushd /tmp/src-thoth-pylint && \
+    pipenv install && \
+    rm -rf /tmp/src-thoth-pylint
