--- a/thoth-pylint/Dockerfile
+++ b/thoth-pylint/Dockerfile
@@ -12,17 +12,15 @@ LABEL summary="$SUMMARY" \
       version="0.1.0" \
       release="0"
 
-COPY ./ /tmp/src/thoth-pylint
+COPY ./ /tmp/src-thoth-pylint
 
 USER 0
-RUN pushd /tmp/src/thoth-pylint && \
+RUN pushd /tmp/src-thoth-pylint && \
     cp pylintrc /etc/pylintrc && \
     chmod 644 /etc/pylintrc && \
     chown 0:0 /etc/pylintrc
 
 USER ${USERID}
-RUN pushd /tmp/src/thoth-pylint && \
-    chmod 777 /tmp/src/thoth-pylint && \
-    pipenv lock -r > requirements.txt && \
-    pip3 install --user -r requirements.txt && \
-    rm -rf /tmp/src
+RUN pushd /tmp/src-thoth-pylint && \
+    pipenv install && \
+    rm -rf /tmp/src-thoth-pylint
