--- a/thoth-pylint/Dockerfile
+++ b/thoth-pylint/Dockerfile
@@ -12,15 +12,15 @@ LABEL summary="$SUMMARY" \
       version="0.1.0" \
       release="0"
 
-COPY ./ /tmp/src-thoth-pylint
+COPY ./ ${HOME}/src-thoth-pylint
 
 USER 0
-RUN pushd /tmp/src-thoth-pylint && \
+RUN pushd ${HOME}/src-thoth-pylint && \
     cp pylintrc /etc/pylintrc && \
     chmod 644 /etc/pylintrc && \
     chown 0:0 /etc/pylintrc
 
 USER ${USERID}
-RUN pushd /tmp/src-thoth-pylint && \
+RUN pushd ${HOME}/src-thoth-pylint && \
     pipenv install && \
-    rm -rf /tmp/src-thoth-pylint
+    rm -rf ${HOME}/src-thoth-pylint
