--- a/thoth-coala/Dockerfile
+++ b/thoth-coala/Dockerfile
@@ -9,11 +9,14 @@ LABEL summary="$SUMMARY" \
       io.k8s.description="$DESCRIPTION" \
       io.k8s.display-name="Thoth Python 3.6 Coala" \
       io.openshift.tags="python,python36,coala" \
-      name="thoth-station/python-coala" \
-      version="0.1.0" \
+      name="thoth-station/thoth-coala" \
+      version="0.3.0" \
       release="0"
 
-COPY ./ ${HOME}/src-thoth-pylint
-RUN pushd ${HOME}/src-thoth-pylint && \
-    pipenv install && \
-    rm -rf ${HOME}/src-thoth-pylint
+USER 0
+COPY ./ /tmp/src-thoth-coala
+RUN chmod 777 -R /tmp/src-thoth-coala
+
+USER ${USER}
+RUN pushd /tmp/src-thoth-coala && \
+    pip3 install --requirement requirements.txt --user
