--- a/thoth-pylint/Dockerfile
+++ b/thoth-pylint/Dockerfile
@@ -6,21 +6,20 @@ ENV SUMMARY="Thoth's toolchain for Pylint." \
 LABEL summary="$SUMMARY" \
       description="$DESCRIPTION" \
       io.k8s.description="$DESCRIPTION" \
-      io.k8s.display-name="Thoth Python 3.6 Coala" \
-      io.openshift.tags="python,python36,coala" \
-      name="thoth-station/python-coala" \
-      version="0.1.0" \
+      io.k8s.display-name="Thoth Python 3.6 Pylint" \
+      io.openshift.tags="python,python36,pylint" \
+      name="thoth-station/thoth-pylint" \
+      version="0.3.0" \
       release="0"
 
-COPY ./ ${HOME}/src-thoth-pylint
-
 USER 0
-RUN pushd ${HOME}/src-thoth-pylint && \
+COPY ./ /tmp/src-thoth-pylint
+RUN chmod 777 -R /tmp/src-thoth-pylint && \
+    pushd /tmp/src-thoth-pylint && \
     cp pylintrc /etc/pylintrc && \
     chmod 644 /etc/pylintrc && \
     chown 0:0 /etc/pylintrc
 
 USER ${USERID}
-RUN pushd ${HOME}/src-thoth-pylint && \
-    pipenv install && \
-    rm -rf ${HOME}/src-thoth-pylint
+RUN pushd /tmp/src-thoth-pylint && \
+    pip3 install --requirement requirements.txt --user
