--- a/thoth-python36/Dockerfile
+++ b/thoth-python36/Dockerfile
@@ -1,11 +1,11 @@
 FROM registry.fedoraproject.org/fedora:28
 
 ENV PYTHON_VERSION="3.6" \
-    SUMMARY="Thoth's toolchain for testing Python $PYTHON_VERSION applications" \
-    DESCRIPTION="Thoth's toolchain for testing Python $PYTHON_VERSION applications." \
+    SUMMARY="Thoth's toolchain for testing Python ${PYTHON_VERSION} applications" \
+    DESCRIPTION="Thoth's toolchain for testing Python ${PYTHON_VERSION} applications." \
     LANG="en_US.UTF-8" \
     USERID=1042 \
-    HOME=/opt/app-root \
+    HOME="/opt/app-root" \
     PATH="/opt/app-root/bin:$PATH"
 
 LABEL summary="$SUMMARY" \
@@ -14,7 +14,8 @@ LABEL summary="$SUMMARY" \
       io.k8s.display-name="Thoth Python 3.6" \
       io.openshift.expose-services="8080:http" \
       io.openshift.tags="python,python36" \
-      name="thoth-station/python-36" \
+      name="thoth-station/thoth-python36" \
+      vendor="AICoE at the Office of the CTO, Red Hat Inc." \
       version="0.3.0" \
       release="0" \
       usage="This is not a S2I builder image!" \
@@ -27,7 +28,7 @@ RUN dnf update -y --setopt=tsflags=nodocs && \
 RUN useradd -u ${USERID} -r -g 0 -d ${HOME} -s /sbin/nologin -c "Default Application User" default && \
     mkdir -p ${HOME}/.pki/nssdb ${HOME}/src/ ${HOME}/.local/ && \
     chown -R ${USERID}:0 ${HOME} && \
-    chmod 777 ${HOME}/src/ ${HOME} ${HOME}/.local/
+    chmod 777 -R ${HOME}/src/ ${HOME} ${HOME}/.local/
 
 USER ${USERID}
 
