all FROM lines are now pulling from quay
Signed-off-by: Christoph Görn <goern@redhat.com>

--- a/thoth-pylint/Dockerfile
+++ b/thoth-pylint/Dockerfile
@@ -1,4 +1,4 @@
-FROM thoth-python36:latest
+FROM quay.io/thoth-station/thoth-python36:latest
 
 ENV SUMMARY="Thoth's toolchain for Pylint." \
     DESCRIPTION="Thoth's toolchain for Pylint."
