--- a/thoth-python36/Dockerfile
+++ b/thoth-python36/Dockerfile
@@ -1,8 +1,8 @@
 FROM registry.fedoraproject.org/fedora:28
 
-ENV PYTHON_VERSION="3.6" \
+ENV PYTHON_VERSION="3.6.8" \
     SUMMARY="Thoth's toolchain for Python ${PYTHON_VERSION} applications" \
-    DESCRIPTION="Thoth's toolchain for Python ${PYTHON_VERSION} applications." \
+    DESCRIPTION="Thoth's toolchain for Python ${PYTHON_VERSION} applications. This toolchain is based on Fedora 28. It includes the latest pipenv." \
     LANG="en_US.UTF-8" \
     USERID=1042 \
     HOME="/opt/app-root" \
@@ -28,11 +28,12 @@ LABEL summary="$SUMMARY" \
 WORKDIR ${HOME}
 
 RUN INSTALL_PKGS="gd-devel openssl-devel zlib-devel libcurl-devel libxml2-devel libxslt-devel \
-    make autoconf automake bzip2 gcc-c++ patch gdb procps-ng unzip wget which git pipenv" && \
+    make autoconf automake bzip2 gcc-c++ patch gdb procps-ng unzip wget which git" && \
     dnf install -y --setopt=tsflags=nodocs $INSTALL_PKGS && \
     rpm -V $INSTALL_PKGS && \
     dnf update -y --setopt=tsflags=nodocs && \
-    dnf clean all -y
+    dnf clean all -y && \
+    pip3 install pipenv
 
 RUN useradd -u ${USERID} -r -g 0 -d ${HOME} -s /sbin/nologin -c "Default Application User" default && \
     mkdir -p ${HOME}/.pki/nssdb ${HOME}/src/ ${HOME}/.local/ ${HOME}/.cache/ && \
