--- a/thoth-coala/Dockerfile
+++ b/thoth-coala/Dockerfile
@@ -1,4 +1,4 @@
-FROM quay.io/thoth-station/thoth-python36:latest
+FROM quay.io/aicoe/thoth-python36:latest
 
 ENV SUMMARY="Thoth's toolchain for Coala linting." \
     DESCRIPTION="Thoth's toolchain for Coala linting."
@@ -12,8 +12,11 @@ LABEL summary="$SUMMARY" \
 
 USER 0
 COPY ./ /tmp/src-thoth-coala
-RUN chmod 777 -R /tmp/src-thoth-coala && \
+RUN INSTALL_PKGS="gd-devel openssl-devel zlib-devel libcurl-devel libxml2-devel libxslt-devel \
+    make autoconf automake bzip2 gcc-c++ patch gdb procps-ng unzip wget which git pipenv" && \
+    chmod 777 -R /tmp/src-thoth-coala && \
     pushd /tmp/src-thoth-coala && \
-    pip3 install --requirement requirements.txt
+    pip3 install --requirement requirements.txt && \
+    dnf remove -y $INSTALL_PKGS
 
 USER ${USERID}
