--- a/thoth-coala/requirements.txt
+++ b/thoth-coala/requirements.txt
@@ -1,12 +1,13 @@
 -i https://pypi.org/simple
 alabaster==0.7.12
 appdirs==1.4.3
-astroid==1.6.5
+astroid==1.6.6
+attrs==19.1.0
 autoflake==0.6.6
-autopep8==1.4.2
+autopep8==1.4.4
 babel==2.6.0
 bandit==1.5.1
-certifi==2018.10.15
+certifi==2019.3.9
 chardet==3.0.4
 click==6.6
 cmakelint==1.3.4.1
@@ -16,8 +17,8 @@ coala==0.11.0
 colorama==0.3.9
 colorlog==2.10.0
 cppclean==0.12
-cpplint==1.3.0
-decorator==4.3.0
+cpplint==1.4.4
+decorator==4.4.0
 dennis==0.9
 dependency-management==0.4.0
 docopt==0.6.2
@@ -28,54 +29,55 @@ gitdb2==2.0.5
 gitpython==2.1.11
 guess-language-spirit==0.5.3
 html-linter==0.3.0
-idna==2.7
+idna==2.8
 imagesize==1.1.0
 ipython-genutils==0.2.0
-isort==4.3.4
-jinja2==2.10
-jsonschema==2.6.0
+isort==4.3.17
+jinja2==2.10.1
+jsonschema==3.0.1
 jupyter-core==4.4.0
 lazy-object-proxy==1.3.1
 libclang-py3==3.4.0
 mando==0.3.3
-markupsafe==1.0
+markupsafe==1.1.1
 mccabe==0.6.1
 munkres3==1.0.5.5
 mypy-lang==0.4.6
 nbformat==4.4.0
-nltk==3.3.0
-packaging==18.0
-pbr==5.1.0
+nltk==3.4.1
+packaging==19.0
+pbr==5.1.3
 polib==1.1.0
 proselint==0.7.0
-pycodestyle==2.4.0
+pycodestyle==2.5.0
 pydocstyle==1.1.1
 pyflakes==1.4.0
-pygments==2.2.0
-pylint==1.9.3
-pyparsing==2.3.0
+pygments==2.3.1
+pylint==1.9.4
+pyparsing==2.4.0
 pyprint==0.2.6
 pyroma==2.2
-pytz==2018.7
+pyrsistent==0.14.11
+pytz==2019.1
 pyyaml==3.13
 radon==1.4.0
-requests==2.20.0
+requests==2.21.0
 restructuredtext-lint==1.0.1
 rstcheck==2.2
 safety==0.5.1
 sarge==0.1.5.post0
-scspell3k==2.1
-six==1.11.0
+scspell3k==2.2
+six==1.12.0
 smmap2==2.0.5
 snowballstemmer==1.2.1
 sphinx==1.4.9
-stevedore==1.30.0
+stevedore==1.30.1
 template-remover==0.1.9
 termcolor==1.1.0
 traitlets==4.3.2
 unidiff==0.5.5
-urllib3==1.24.1
+urllib3==1.24.2
 vulture==0.10
-wrapt==1.10.11
+wrapt==1.11.1
 yamllint==1.6.1
 yapf==0.14.0
