--- a/thoth-pytest/requirements.txt
+++ b/thoth-pytest/requirements.txt
@@ -1,10 +1,10 @@
 -i https://pypi.org/simple
-atomicwrites==1.2.1
-attrs==18.2.0
-coverage==4.5.2
-more-itertools==4.3.0
-pluggy==0.8.0
-py==1.7.0
-pytest-cov==2.6.0
-pytest==4.0.0
-six==1.11.0
+atomicwrites==1.3.0
+attrs==19.1.0
+coverage==4.5.3
+more-itertools==7.0.0 ; python_version > '2.7'
+pluggy==0.9.0
+py==1.8.0
+pytest-cov==2.6.1
+pytest==4.4.1
+six==1.12.0
