:bug: :green_heart: remove a few packages too much...
Signed-off-by: Christoph Görn <goern@redhat.com>

--- a/thoth-coala/Dockerfile
+++ b/thoth-coala/Dockerfile
@@ -12,11 +12,11 @@ LABEL summary="$SUMMARY" \
 
 USER 0
 COPY ./ /tmp/src-thoth-coala
-RUN INSTALL_PKGS="gd-devel openssl-devel zlib-devel libcurl-devel libxml2-devel libxslt-devel \
-    make autoconf automake bzip2 gcc-c++ patch gdb procps-ng unzip wget which git pipenv" && \
+RUN DEINSTALL_PKGS="gd-devel openssl-devel zlib-devel libcurl-devel libxml2-devel libxslt-devel \
+    make autoconf automake bzip2 gcc-c++ patch gdb procps-ng unzip wget" && \
     chmod 777 -R /tmp/src-thoth-coala && \
     pushd /tmp/src-thoth-coala && \
     pip3 install --requirement requirements.txt && \
-    dnf remove -y $INSTALL_PKGS
+    dnf remove -y $DEINSTALL_PKGS
 
 USER ${USERID}
