--- a/thoth-black/Dockerfile
+++ b/thoth-black/Dockerfile
@@ -12,8 +12,11 @@ LABEL summary="$SUMMARY" \
 
 USER 0
 COPY ./ /tmp/src-thoth-coala
-RUN chmod 777 -R /tmp/src-thoth-coala && \
+RUN DEINSTALL_PKGS="gd-devel openssl-devel zlib-devel libcurl-devel libxml2-devel libxslt-devel \
+    make autoconf automake bzip2 gcc-c++ patch gdb procps-ng unzip wget" && \
+    chmod 777 -R /tmp/src-thoth-coala && \
     pushd /tmp/src-thoth-coala && \
-    pip3 install --requirement requirements.txt
+    pip3 install --requirement requirements.txt && \
+    dnf remove -y $DEINSTALL_PKGS
 
 USER ${USERID}
