--- a/thoth-pytest/Dockerfile
+++ b/thoth-pytest/Dockerfile
@@ -12,11 +12,9 @@ LABEL summary="$SUMMARY" \
 
 USER 0
 COPY ./ /tmp/src-thoth-pytest
-RUN DEINSTALL_PKGS="gd-devel openssl-devel zlib-devel libcurl-devel libxml2-devel libxslt-devel \
-    make autoconf automake bzip2 gcc-c++ patch gdb procps-ng unzip wget" && \
+RUN dnf install -y --setopt=tsflags=nodocs @development-tools python3-devel && \
     chmod 777 -R /tmp/src-thoth-pytest && \
     pushd /tmp/src-thoth-pytest && \
-    pip3 install --requirement requirements.txt && \
-    dnf remove -y $DEINSTALL_PKGS
+    pip3 install --requirement requirements.txt
 
 USER ${USERID}
